--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -6,7 +6,9 @@
     {
       "files": ["*.ts", "*.tsx"],
       "extends": ["plugin:@nx/typescript"],
-      "rules": {}
+      "rules": {
+        "@typescript-eslint/no-inferrable-types": [0]
+      }
     },
     {
       "files": ["*.js", "*.jsx"],
