--- a/package.json
+++ b/package.json
@@ -6,7 +6,13 @@
     "build": "nx build",
     "test": "nx test"
   },
+  "bin": {
+    "harmor": "./src/index.js"
+  },
   "dependencies": {
+    "kolorist": "^1.8.0",
+    "minimist": "^1.2.8",
+    "prompts": "^2.4.2",
     "tslib": "^2.3.0"
   },
   "devDependencies": {
@@ -17,7 +23,9 @@
     "@nx/workspace": "17.0.2",
     "@swc-node/register": "~1.6.7",
     "@swc/core": "~1.3.85",
+    "@types/minimist": "^1.2.4",
     "@types/node": "18.7.1",
+    "@types/prompts": "^2.4.7",
     "@typescript-eslint/eslint-plugin": "^5.60.1",
     "@typescript-eslint/parser": "^5.60.1",
     "@vitest/coverage-c8": "~0.32.0",
