- Added path and regex replacements. - Introduced option to encrypt values instead of removing them.

--- a/package.json
+++ b/package.json
@@ -10,9 +10,14 @@
     "harmor": "./src/index.js"
   },
   "dependencies": {
+    "@types/get-value": "^3.0.4",
+    "@types/har-format": "^1.2.14",
+    "@types/set-value": "^4.0.2",
+    "get-value": "^3.0.1",
     "kolorist": "^1.8.0",
     "minimist": "^1.2.8",
     "prompts": "^2.4.2",
+    "set-value": "^4.1.0",
     "tslib": "^2.3.0"
   },
   "devDependencies": {
