--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@nx/eslint": "17.0.2",
     "@nx/eslint-plugin": "17.0.2",
     "@nx/js": "17.0.2",
+    "@nx/react": "^17.0.2",
     "@nx/vite": "17.0.2",
     "@nx/workspace": "17.0.2",
     "@swc-node/register": "~1.6.7",
