--- a/.github/workflows/push.yaml
+++ b/.github/workflows/push.yaml
@@ -60,5 +60,5 @@ jobs:
         env:
           GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           NODE_AUTH_TOKEN: ${{ secrets.NPM_PUBLISH_TOKEN }}
-        run: cd ./dist/harmor && chmod +x ./src/index.js &&  && npm publish --tag latest
+        run: cd ./dist/harmor && chmod +x ./src/index.js && npm publish --tag latest
 
