--- a/web/package.json
+++ b/web/package.json
@@ -10,9 +10,10 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "react-terminal-ui": "^1.1.0",
+    "@vercel/analytics": "^1.1.1",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-terminal-ui": "^1.1.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
