--- a/package.json
+++ b/package.json
@@ -19,27 +19,33 @@
     "tslib": "^2.3.0"
   },
   "devDependencies": {
-    "@types/get-value": "^3.0.4",
-    "@types/set-value": "^4.0.2",
     "@nx/eslint": "17.0.2",
     "@nx/eslint-plugin": "17.0.2",
-    "@nx/js": "17.0.2",
+    "@nx/jest": "^17.1.1",
+    "@nx/js": "17.1.1",
     "@nx/react": "^17.0.2",
     "@nx/vite": "17.0.2",
     "@nx/workspace": "17.0.2",
     "@swc-node/register": "~1.6.7",
     "@swc/core": "~1.3.85",
+    "@types/get-value": "^3.0.4",
+    "@types/jest": "^29.4.0",
     "@types/minimist": "^1.2.4",
     "@types/node": "18.7.1",
     "@types/prompts": "^2.4.7",
+    "@types/set-value": "^4.0.2",
     "@typescript-eslint/eslint-plugin": "^5.60.1",
     "@typescript-eslint/parser": "^5.60.1",
     "@vitest/coverage-c8": "~0.32.0",
     "@vitest/ui": "~0.32.0",
     "eslint": "~8.46.0",
     "eslint-config-prettier": "^9.0.0",
+    "jest": "^29.4.1",
+    "jest-environment-jsdom": "^29.4.1",
     "nx": "17.0.2",
     "prettier": "^2.6.2",
+    "ts-jest": "^29.1.0",
+    "ts-node": "10.9.1",
     "typescript": "~5.1.3",
     "vite": "~4.3.9",
     "vitest": "~0.32.0"
