--- a/project.json
+++ b/project.json
@@ -39,11 +39,10 @@
       }
     },
     "test": {
-      "executor": "@nx/vite:test",
-      "outputs": ["{options.reportsDirectory}"],
+      "executor": "@nx/jest:jest",
+      "outputs": ["{workspaceRoot}/coverage/{projectName}"],
       "options": {
-        "passWithNoTests": true,
-        "reportsDirectory": "coverage/harmor"
+        "jestConfig": "jest.config.ts"
       }
     }
   },
