Add github workflow for seamless CI/CD. Every merge to master will open release pull request with alpha version for testing Every release PR merged will release new production version to npm

--- a/package.json
+++ b/package.json
@@ -4,13 +4,13 @@
   "license": "MIT",
   "scripts": {
     "build": "nx build",
+    "lint": "nx lint",
     "test": "nx test"
   },
   "bin": {
     "harmor": "./src/index.js"
   },
   "dependencies": {
-    "@types/har-format": "^1.2.14",
     "get-value": "^3.0.1",
     "kolorist": "^1.8.0",
     "minimist": "^1.2.8",
@@ -19,6 +19,7 @@
     "tslib": "^2.3.0"
   },
   "devDependencies": {
+    "@types/har-format": "^1.2.14",
     "@types/get-value": "^3.0.4",
     "@types/set-value": "^4.0.2",
     "@nx/eslint": "17.0.2",
