Add description and keywords to package.json

--- a/package.json
+++ b/package.json
@@ -1,7 +1,23 @@
 {
   "name": "harmor",
   "version": "1.0.2",
-  "license": "MIT",
+  "license": "Apache License 2.0",
+  "author": "Frontegg LTD",
+  "description": "HARmor provides a range of cleaning and sanitization capabilities. HARmor can detect and scrub sensitive information, such as cookies, passwords, authorization headers, and query parameters.",
+  "keywords": [
+    "HARmor",
+    "Frontegg",
+    "HAR-Security",
+    "Data-Sanitization",
+    "HAR-Encryption",
+    "Data-Privacy-Tools",
+    "HAR-Compliance",
+    "Sensitive-Data-Protection",
+    "Web-Traffic-Analysis",
+    "HAR-Data-Management",
+    "Network-Security-Tools",
+    "HAR-File-Integrity",
+  ],
   "scripts": {
     "build": "nx build",
     "lint": "nx lint",
